# alakazam

./: .gitignore  README.md  pyproject.toml
gpt4all/: README.md  chat.py  get_gpt4all.py  qa.py
red-pajama/: README.md  app.py
